# ssh-key

./: .gitignore  README.md  pyproject.toml  sshkey.sh
commands/: add-account.sh  add_account.py  init.py  init.sh  status.py
lib/: accounts.sh  agent.sh  config.sh  github.py  ssh.py  ui.py  ui.sh
sshkey/: main.py
sshkey/commands/: add_account.py  load_account.py  remove_account.py
sshkey/lib/: accounts.py  github.py  ssh.py
